[package]
name = "rust-blaster"
version = "0.1.0"
authors = ["katagis <fox.dealos@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
ggez = "0.4.4"
rand = "0.6.5"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0"
bincode = "1.1.4"
